--- a/component/usage.html
+++ b/component/usage.html
@@ -13,11 +13,49 @@
     <hr>
 
     <blog-post v-for="post in posts" :title="post.title" :id="post.id" :key="post.id"></blog-post>
+
+    <hr> 禁用特性继承
+    <br>
+    <base-input v-model="username" class="username-input" placeholder="Enter your username"></base-input>
+    <br>
+    <br>
+    <base-input1 xxx="ssss" v-model="username" class="username" placeholder="Enter your username" data-date-picker="activated"></base-input1>
 </div>
 
 <body>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
     <script>
+
+        Vue.component("base-input1", {
+            inheritAttrs: false,//组件的根元素不继承特性，
+            template: `
+                <div class="2222">
+                    <input
+                    v-bind="$attrs"
+                    >
+                </div>
+                `,
+            mounted: function () {
+                console.log(this.$attrs);
+            }
+        });
+        Vue.component('base-input', {
+            inheritAttrs: false,
+            props: ['label', 'value'],
+            template: `
+                <label>
+                {{ label }}
+                <input
+                    v-bind="$attrs"
+                    v-bind:value="value"
+                    v-on:input="$emit('input', $event.target.value)"
+                >
+                </label>
+            `,
+            mounted: function () {
+                console.log(this.$attrs);
+            }
+        })
         Vue.component('blog-post', {
             props: ['title', 'id'],
             template: `<h3>{{id}}---{{title}}</h3>`
@@ -25,6 +63,7 @@
         var app = new Vue({
             el: '#app',
             data: {
+                username: '',
                 posts: [
                     { id: 1, title: 'My journey with Vue' },
                     { id: 2, title: 'Blogging with Vue' },
